--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,4 +2,5 @@
 layout: archive
 ---
 
-This is the new homepage.
+Hi. Welcome to my GitHub Page. My name is Sameera Suhail and I am a recent graduate in Electrical and Electronics Engineering from Swinburne University of Technology, Melbourne . Here I have compiled a few of the projects that I have done in Electronics Engineering and Data Science. Each project has a short write up and a link to a GitHub repository with the complete code and report. 
+
