change about text

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,5 +2,7 @@
 layout: archive
 ---
 
-Hi. Welcome to my GitHub Page. My name is Sameera Suhail and I am a recent graduate in Electrical and Electronics Engineering from Swinburne University of Technology, Melbourne . Here I have compiled a few of the projects that I have done in Electronics Engineering and Data Science. Each project has a short write up and a link to a GitHub repository with the complete code and report. 
+Hi. Welcome to my GitHub Page. My name is Sameera Suhail and I am a recent graduate in Electrical and Electronics Engineering from Swinburne University of Technology, Melbourne. Apart from this degree, I have a certificate in Data Science which focused on driving business intelligence from data and coming up with marketing strategies. I have experience in Python, R, MATLAB and C- all of which I have used to tackle actual projects. 
+
+Here I have compiled a few of those projects that I have done in Electronics Engineering and Data Science. Each project has a short write up and a link to a GitHub repository with the complete code and report. 
 
